fix horizontal scroll

--- a/home.css
+++ b/home.css
@@ -66,7 +66,7 @@ nav{
     background-color: rgba(0, 0, 0, 0.5);
     background-blend-mode: multiply;
     background-position: center;
-    width: 105%;
+    width: 100%;
 }
 .title-container{
     width: 80%;
